--- a/Src/Dimension3D/Themes/Generic.xaml
+++ b/Src/Dimension3D/Themes/Generic.xaml
@@ -3,7 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" >
 
 
-    <Style TargetType="{x:Type Dimension3DElement}">
+    <Style TargetType="{x:Type DimensionModelVisual3D}">
         
     </Style>
 </ResourceDictionary>
