--- a/Samples/App.xaml
+++ b/Samples/App.xaml
@@ -4,9 +4,18 @@
              xmlns:local="clr-namespace:Dimension3D.Samples"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <DiffuseMaterial x:Key="DefaultMaterial" Brush="Gray"/>
-        <DiffuseMaterial x:Key="DefaultIsPressed" Brush="LightBlue"/>
-        <DiffuseMaterial x:Key="DefaultIsMouseOver" Brush="LightCoral"/>
+
+        <EmissiveMaterial x:Key="TrajectoryMaterial" Brush="#30DB00FF"/>
+        <EmissiveMaterial x:Key="TrajectoryMaterial2" Brush="#3000DBFF"/>
+        <MaterialGroup x:Key="SunMaterial">
+            <EmissiveMaterial >
+                <EmissiveMaterial.Brush>
+                    <ImageBrush Stretch="Fill"  ImageSource="/Images/Sun_Texture.jpg" />
+                </EmissiveMaterial.Brush>
+            </EmissiveMaterial>
+            <DiffuseMaterial  Brush="Transparent">
+            </DiffuseMaterial>
+        </MaterialGroup>
 
 
         <DiffuseMaterial x:Key="EarthMaterial">
@@ -14,59 +23,114 @@
                 <ImageBrush Stretch="Fill"  ImageSource="/Images/Earth_Texture.png" />
             </DiffuseMaterial.Brush>
         </DiffuseMaterial>
+        <DiffuseMaterial x:Key="EarthNightMaterial">
+            <DiffuseMaterial.Brush>
+                <ImageBrush Stretch="Fill"  ImageSource="/Images/Earth_Night_Texture.jpg" />
+            </DiffuseMaterial.Brush>
+        </DiffuseMaterial>
 
-        <Style x:Key="HearthButtonStyle" TargetType="{x:Type DimensionButton3D}">
-            <Style.Setters >  
-                <Setter Property="Template">
+        <DiffuseMaterial x:Key="MoonMaterial">
+            <DiffuseMaterial.Brush>
+                <ImageBrush Stretch="Fill"  ImageSource="/Images/Moon_Texture.jpg" />
+            </DiffuseMaterial.Brush>
+        </DiffuseMaterial>
+
+        <Style TargetType="{x:Type local:PlanetControl}">
+
+            <Style.Setters>
+                <Setter Property="SizeX" Value="100"/>
+                <Setter Property="SizeY" Value="100"/>
+                <Setter Property="SizeZ" Value="100"/>
+
+                <Setter Property="Template" >
                     <Setter.Value>
-                        <ControlTemplate TargetType="DimensionButton3D">
-                            <DimensionGeometrySphere x:Name="box" Material="{DynamicResource EarthMaterial}">
-                                <DimensionGeometrySphere.Transform>
-                                    <Transform3DGroup>
-                                        <ScaleTransform3D ScaleX="10" ScaleY="9.4" ScaleZ="10"/>
-                                        <RotateTransform3D >
-                                            <RotateTransform3D.Rotation>
-                                                <AxisAngleRotation3D x:Name="rotation" Axis="0,1,0" Angle="0"/>
-                                            </RotateTransform3D.Rotation>
-                                        </RotateTransform3D>
-                                        <RotateTransform3D >
-                                            <RotateTransform3D.Rotation>
-                                                <AxisAngleRotation3D   Axis="0,0,1" Angle="23.26"/>
-                                            </RotateTransform3D.Rotation>
-                                        </RotateTransform3D> 
-                                    </Transform3DGroup>
-                                   
-                                </DimensionGeometrySphere.Transform>
-                            </DimensionGeometrySphere>
-                            <ControlTemplate.Triggers>
-                                
-                                <!--<Trigger Property="IsMouseOver" Value="True">
-                                    --><!--<Setter TargetName="box" Property="Material" Value="{DynamicResource DefaultIsMouseOver}"/>--><!--
-                                    <Trigger.EnterActions>
-                                        <BeginStoryboard>
-                                            <Storyboard>
-                                                <DoubleAnimation Storyboard.TargetName="rotation" Storyboard.TargetProperty="Angle" 
-                                 From="0.0" To="360" Duration="0:0:0.4" RepeatBehavior="Forever" AutoReverse="False"/>
-                                            </Storyboard>
-                                        </BeginStoryboard>
-                                    </Trigger.EnterActions>
-                                </Trigger>-->
-                                <Trigger Property="IsPressed" Value="True">
-                                    <Setter TargetName="box" Property="Material" Value="{DynamicResource DefaultIsPressed}"/>
-                                </Trigger>
-                                <EventTrigger RoutedEvent="Loaded">
-                                    <BeginStoryboard>
-                                        <Storyboard>
-                                            <DoubleAnimation Storyboard.TargetName="rotation" Storyboard.TargetProperty="Angle" 
-                                 From="0.0" To="360" Duration="0:1:0" RepeatBehavior="Forever" AutoReverse="False"/>
-                                        </Storyboard>
-                                    </BeginStoryboard>
-                                </EventTrigger>
-                            </ControlTemplate.Triggers>
+                        <ControlTemplate TargetType="{x:Type local:PlanetControl}">
+                            <Grid>
+                                <ItemsPresenter/>
+                                <Model3DPresenter x:Name="PART_MODEL" >
+                                    <Model3DGroup> 
+                                        <GeometryModel3D Material="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Material, Mode=OneWay}">
+                                            <GeometryProvider.Provider>
+                                                <DimensionGeometrySphere />
+                                            </GeometryProvider.Provider>
+                                            <GeometryModel3D.Transform>
+                                                <Transform3DGroup>
+                                                    <ScaleTransform3D 
+                                                    ScaleX="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=SizeX, Mode=OneWay}" 
+                                                    ScaleY="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=SizeY, Mode=OneWay}" 
+                                                    ScaleZ="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=SizeZ, Mode=OneWay}"/>
+                                                    <RotateTransform3D>
+                                                        <RotateTransform3D.Rotation>
+                                                            <AxisAngleRotation3D x:Name="rotation" Axis="0,1,0"  Angle="0"/>
+                                                        </RotateTransform3D.Rotation>
+                                                    </RotateTransform3D>
+                                                    <TranslateTransform3D 
+                                                    OffsetX="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=PositionX, Mode=OneWay}"
+                                                    OffsetY="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=PositionY, Mode=OneWay}"
+                                                    OffsetZ="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=PositionZ, Mode=OneWay}"/>
+
+                                                </Transform3DGroup>
+                                            </GeometryModel3D.Transform>
+                                        </GeometryModel3D>
+
+                                        <!--<GeometryModel3D Material="{StaticResource TrajectoryMaterial}" BackMaterial="{StaticResource TrajectoryMaterial}">
+                                            <GeometryProvider.Provider>
+                                                <DimensionGeometryArc 
+                                                StartAngle="0" 
+                                                EndAngle="360" 
+                                                Radius="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=TrajectoryRadiusX, Mode=OneWay}" 
+                                                Size="35" VertexCount="160" />
+                                            </GeometryProvider.Provider>
+                                            <GeometryModel3D.Transform>
+                                                <Transform3DGroup>
+
+                                                    <TranslateTransform3D 
+                                                    OffsetX="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=TrajectoryCenterX, Mode=OneWay}"
+                                                    OffsetY="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=TrajectoryCenterY, Mode=OneWay}"
+                                                    OffsetZ="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=TrajectoryCenterZ, Mode=OneWay}"/>
+
+                                                </Transform3DGroup>
+                                            </GeometryModel3D.Transform>
+                                        </GeometryModel3D>-->
+                                        <GeometryModel3D Material="{StaticResource TrajectoryMaterial2}" BackMaterial="{StaticResource TrajectoryMaterial2}">
+                                            <GeometryProvider.Provider>
+                                                <DimensionGeometryArc 
+                                                StartAngle="0" 
+                                                EndAngle="360" 
+                                                Radius="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=TrajectoryRadiusX, Mode=OneWay}" 
+                                                Size="35" VertexCount="160" />
+                                            </GeometryProvider.Provider>
+                                            <GeometryModel3D.Transform>
+                                                <Transform3DGroup>
+                                                    <RotateTransform3D>
+                                                        <RotateTransform3D.Rotation>
+                                                            <AxisAngleRotation3D Axis="1,0,0" Angle="90"/>
+                                                        </RotateTransform3D.Rotation>
+                                                    </RotateTransform3D>
+
+
+                                                    <TranslateTransform3D 
+                                                    OffsetX="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=TrajectoryCenterX, Mode=OneWay}"
+                                                    OffsetY="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=TrajectoryCenterY, Mode=OneWay}"
+                                                    OffsetZ="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=TrajectoryCenterZ, Mode=OneWay}"/>
+
+                                                </Transform3DGroup>
+                                            </GeometryModel3D.Transform>
+                                        </GeometryModel3D>
+                                    </Model3DGroup>
+                                    
+                                </Model3DPresenter>
+
+                            </Grid>
+
+
                         </ControlTemplate>
                     </Setter.Value>
                 </Setter>
-            </Style.Setters> 
+            </Style.Setters>
         </Style>
+
+
+
     </Application.Resources>
 </Application>
