--- a/Src/Dimension3D.Core/Themes/Generic.xaml
+++ b/Src/Dimension3D.Core/Themes/Generic.xaml
@@ -15,34 +15,19 @@
     <DiffuseMaterial  x:Key="defaultButtonClickMateriel" Brush="#FF00CFFF" />
     <DiffuseMaterial  x:Key="defaultIsCheckedMateriel" Brush="#FFDB00FF" />
 
-    <!--<Style TargetType="{x:Type VisualItems}" BasedOn="{x:Null}">
+
+    <Style x:Key="DefaultDimensionModelVisual3DStyle" TargetType="{x:Type local:DimensionModelVisual3D}">  
         <Setter Property="SnapsToDevicePixels" Value="False"/>
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="ItemsControl">
-                    <ItemsPresenter  Style="{x:Null}" />
+                <ControlTemplate TargetType="{x:Type local:DimensionModelVisual3D}">
+                    <Grid>
+                        <ItemsPresenter/>
+                        <local:Model3DPresenter x:Name="PART_MODEL"  Model="{TemplateBinding Model}" />
+                    </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-        <Setter Property="ItemsPanel">
-            <Setter.Value>
-                <ItemsPanelTemplate>
-                    <StackPanel Style="{x:Null}"
-                                    IsItemsHost="True"
-                                    SnapsToDevicePixels="False"
-                            VirtualizingPanel.IsVirtualizing="False" 
-                            VirtualizingPanel.IsVirtualizingWhenGrouping="False"
-                                    VirtualizingPanel.CacheLength="0"
-                            ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                            ScrollViewer.VerticalScrollBarVisibility="Disabled"/>
-                </ItemsPanelTemplate>
-            </Setter.Value>
-        </Setter> 
-    </Style>-->
-
-
-    <Style x:Key="DefaultDimensionModelVisual3DStyle" TargetType="{x:Type local:DimensionModelVisual3D}">  
-        <Setter Property="SnapsToDevicePixels" Value="False"/> 
     </Style>
 
     <Style x:Key="DefaultDimensionButtonBase3DStyle" TargetType="{x:Type local:DimensionButtonBase3D}" BasedOn="{StaticResource DefaultDimensionModelVisual3DStyle}"> 
